# dexjoco

./: .gitignore  .gitmodules  LICENSE  README.md  assets_manifest.json  environment-dexjoco.yaml  environment-dexjoco.yml  requirements.txt
dexjoco/: README.md  pyproject.toml
dexjoco/dexjoco/data/: __init__.py  episode_store.py  video_writer.py
dexjoco/dexjoco/sim/: __init__.py  mujoco_gym_env.py
dexjoco/dexjoco/sim/controllers/: __init__.py
dexjoco/dexjoco/sim/envs/: __init__.py  panda_bimanual_assembly_env.py  panda_bimanual_hanoi_env.py  panda_bimanual_microwave_cook_env.py  panda_bimanual_photograph_env.py  panda_bimanual_unlock_ipad_env.py  panda_click_mouse_env.py  panda_fold_glasses_env.py  panda_hammer_nail_env.py  panda_pick_bucket_env.py  panda_pinch_tongs_env.py  panda_water_plant_env.py
dexjoco/dexjoco/sim/envs/xmls/: arena_arm_hand_bimanual_assembly.xml  arena_arm_hand_bimanual_hanoi.xml  bucket.xml  (+22 more)
dexjoco/dexjoco/tasks/: __init__.py  config.py  mappings.py  obs_adapters.py  sim_teleop.py
dexjoco/dexjoco/tasks/bimanual_assembly/: config.py
dexjoco/dexjoco/tasks/bimanual_hanoi/: config.py
dexjoco/dexjoco/tasks/bimanual_microwave_cook/: config.py
dexjoco/dexjoco/tasks/bimanual_photograph/: config.py
dexjoco/dexjoco/tasks/bimanual_unlock_ipad/: config.py
dexjoco/dexjoco/tasks/click_mouse/: config.py
dexjoco/dexjoco/tasks/fold_glasses/: config.py
dexjoco/dexjoco/tasks/hammer_nail/: config.py
dexjoco/dexjoco/tasks/pick_bucket/: config.py
dexjoco/dexjoco/tasks/pinch_tongs/: config.py
dexjoco/dexjoco/tasks/water_plant/: config.py
(+325 files in other folders)
